<resources>
    <string name="app_name">همیار حفظ</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content" translatable="false">همیار حفظ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_soal2">Soal2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="shimmer">برای به نمایش درآمدن منوی برنامه٫ دکمه بالای صفحه را لمس کنید</string>

    <string name="list_problem_aye">لیست آیه های مشکل</string>
    <string name="add">+</string>
    <string name="add_problem_aye">افزودن آیه های مشکل</string>
    <string name="save">ذخیره</string>
    <string name="name_sure">نام سوره</string>
    <string name="number_aye">شماره آیه</string>
    <string name="aye">آیه</string>
    <string name="rahnama_text">به نام خداوند بخشنده مهربان \n راهنمای اپلیکیشن: \nسلام دوست عزیز این بخش از اپلیکیشن برای استفاده بهتر از اپلیکیشن طراحی شده. \nهنگام ورود به اپلیکیشن و بعد از صفحه خوش آمد گویی، وارد صفحه اصلی میشی. در این مرحله دو بخش متفاوت وجود داره:  \nبخش نخست: در بالای صفحه آیکونی به شکل قرآن مشاهده میشه که با کلیک روی اون لیست اصلی برنامه ما باز میشه. وقتی لیست باز شد آیتم های حفظ قرآن، ذکرشمار، اعمال روزانه و راهنمای اپلیکیشن اونجا مشاهده میشه که به صورت مفصل و آیتم وار هر کدام را توضیح خواهیم داد: \nآیتم اول :حفظ قرآن  \nدر این آیتم، 30 جزء قرآن کریم قرار داره. اگر هم دنبال عبارتی یا کلمه ای در قرآن میگردی که نمیدونی مال کدام جزء هست میتونی از کادر جستجویی که در بالای متن جزءهای قرآن قرار داره کمکی بگیری. \nبا کلیک روی هر جزء وارد صفحه ای میشی که آن جزء قرآن به زبان عربی همراه ترجمه قرار داره. چون هدف از ساخت این اپلیکیشن ابزاری کمک آموزشی برای همه افرادی که میخوان کار حفظ رو انجام بدن و دوستان برای حفظ آیات به متن عربی قرآن بدون ترجمه احتیاج دارن، با زدن دکمه ی کره ای شکل که در پایین صفحه وجود داره، تنها متن عربی قرآن برات به نمایش در میاد. \nاگه تو حفظ قرآن مشکلی داشتی میتونی با رفتن به قسمت ذخیره آیات مشکل، آیات مورد نظرتو از داخل متن کپی کنی و بعد در قسمت مربوطه مربوط به افزودن ایات  ذخیره کنی و برای مرور آیات در چندین وهله، میتونه خیلی تو حفظ اون قسمت ها به تو یاری برسونه. \nتوجه داشته باش که برای ذخیره آیات حتما اعداد مورد نیاز را بصورت لاتین وارد کن. بعد از ذخیره آیات بصورت لیست، میتونی با کلیک روی هر کدوم از اونا وارد صفحه مربوطه بشی. اگه نیاز ب کپی داشتی میتونی متن رو کپی کنی، اگه آیه رو کامل حفظ شدی آیه رو میتونی از لیست مربوطه پاک کنی یا اگه نیاز به ویرایش داشت اون رو ویرایش کنی.\nدر کنار این بخش ایکونی قراردادیم که آیات مشابه ای با ابتدا و انتهای مشابه هر جز وجود داره طبق تحقیقات انجام گرفته یکی از مشکلات عزیزانی که حفظ قرآن رو انجام میدن، اشتباه گرفتنه مکرر آیات با ابتدا یا انتهای مشابه است. این قسمت برای دوستان طراحی شده که با مرور، به صورت سوال وار مشکلاتی که در این زمینه دارن رو پوشش بدن و اونا رو درطی این مسیر بسیار زیبا همراهی کنه. \nدر کنار همه ی این ها تلاوت زیبای قران رو با صدای استاد شهریار پرهیزگار برای تلفظ و روان خوانی بهتر قرآن، وجود داره. \nآیتم دوم: ذکر شمار \n برگردیم به صفحه اصلی اپلیکیشن؛ در گزینه های دیگه صفحه اصلی، قسمت ذکر شماره که شامل صلوات شمار، ذکر ایام هفته و اذکار تسبیحات حضرت زهرا (س) هست. اگه میخوایی ذکر بگی، این قسمت به تو یاری میرسونه. ویژگی مثبت این قسمت اینه که هر تعداد ذکری که گفتی ذخیره میشه و تا زمانی ک دکمه شروع رو دوباره نزنی این تعداد باقی میمونه؛ با اینکه از اپلیکیشن خارج میشی اما به علت ذخیره شدن، میتونی در زمان مناسب به ذکر گفتن خودت ادامه بدی. \nآیتم سوم: اعمال روزانه \n گزینه اعمال روزانه راه مناسبی برای محاسبه اعمال روزانه، هفتگی، ماهانه و سالانه است. با ورود به این بخش، روی فانوس متصل به هلال ماه که کلیک کنی، 5 آیتم دیگه برات باز میشه. قسمت توضیحات رو برای مراحل محاسبه نفس گذاشتیم که با اطلاعات و با دید باز بتونی از سایر آیتم ها برای بازاندیشی و مراقبت از نفس خودت استفاده کنی.\nدرسایر آیتم های این بخش، هرعمل رو که انجام میدی میتونی به میزان خوبی و بدیِ کار اعمالت رو ثبت کنی، به صورت دوره ای به اون سر بزنی و وضعیت خودت رو در جهت رسیدن به هدف خلقت که همان رسیدن به خشنودی خداوند و کمال است میسنجی و در جهت کم و زیاد شدن بعضی اعمال  برای بهبود بخشیدن به  کارنامه اعمال خودت تلاش کنی \n بخش دوم  \n درگوشه بالای سمت چپ صفحه اصلی اپلیکیشن منو رو گذاشتیم که شامل آموزش حفظ قرآن، تنظیمات اپلیکیشن، امتیاز دهید، درباره ما، منابع و دکمه خروج از اپلیکیشن است \n در بخش تنظیمات میتونی سایز مورد نیازت رو برای متن های موجود در اپلیکیشن تنظیم کنی و به سایز مورد نظر خودت دست پیدا کنی  \n در بخش (امتیاز دهید) اگه از کار ما خوشت اومد با ستاره دادن به اپلیکیشن، ما رو حمایت کن یا اگه نیاز به بهتر شدن بود لطفا با ما در میون بزار؛ انتقادات و پیشنهادات شما اپلیکیشن رو در جهت بهتر شدن، هدایت میکنه یا برای ساختن برنامه های آینده، مارو راهنمایی میکنه \n در بخش درباره ما، اگه میخوای با ما، کار ما و هدف ما برای ساختن اپلیکیشن آشنا بشی، میتونی این قسمت رو مطالعه کنی. درانتهای این قسمت هم راه های ارتباطی ما وجود داره که میتونی نظراتت رو از این راه هم به ما منتقل کنی \n و در نهایت دکمه خروج برای خارج شدن از اپلیکیشن قرار داده شده \n التماس دعا."
    </string>
    <string name="us_text">به نام خداوند جان آفرین \n
إِنَّا نَحْنُ نَزَّلْنَا الذِّكْرَ وَإِنَّا لَهُ لَحَافِظُونَ \n
آیه 9 سوره حجر \n
خدا را شاکریم که توانستیم پس از ماه ها تلاش شبانه روزی جهت تولید اپلیکیشن همیار حفظ، بالاخره در شهریور ماه 1399 نسخه نخست آن را تولید کنیم.  \n
این اپلیکیشن قرآنی حاصل تلاش گروهی دانشجویان پس از انجام نیازسنجی و تحقیقات در زمینه نیازهای حافظین قرآن صورت گرفت. با توجه به پیشرفت تکنولوژی، تغییر نسل جامعه و افزایش تمایل برای استفاده از گوشی های همراه، بر آن شدیم که برنامه ای را تولید کنیم که این نیاز حافظین را برطرف نموده و از طرف دیگر کمکی برای قشر حافظین دانشجو و غیر دانشجو باشد. البته با مطالعات گسترده، ایده های نوین دیگری نیز به ذهن ما خطور کرده که ان شاءالله با تولید آنها بتوانیم در مسیر گسترش فرهنگ قرآن و عترت (ع) گامی موثر برداریم. \n
اپلیکیشنی که در اختیار شماست نسخه سوم اپلیکیشن همیار حفظ است که در بهمن ماه 1399 بروزرسانی شده است. ان شاءالله در آینده نسخه های دیگر دارای امکانات بیشتر را برای شما منتشر خواهیم کرد. \n
 جهت توسعه بیشتر و بهتر اپلیکیشن همواره میتوانید نظرات، پیشنهادات و انتقادات خود را به ادرس ایمیل زیر ارسال نمائید\n
 karimi.hatef@gmail.com\n
ربات تلگرامی همیار حفظ: \n
https://t.me/HamyarEshqBot\n
 کانال راهی به آسمان\n
https://t.me/Skums_club_quran\n
در نسخه های بعدی قابلیت های بهتر و بیشتری را برای شما به ارمغان خواهیم آورد. با معرفی این اپلیکیشن، در گسترش فرهنگ قرآنی سهیم باشید. از همکاری شما مخاطبین عزیز، بسیار ممنون و سپاسگزاریم\n
</string>


    <string name="tozihatActivty_text">مشارطه \n\n مشارطه به معنای شرط گذاری با دیگری یا با خود است و هنگامی که انسان با خود عهد و پیمان ببندد که سرمایه های مادی و معنوی را که خداوند در اختیار او قرار داده است در جهت اصلاح خود به کار گیرد. می گوئیم مشارطه (شرط گذاری با خود کرده است.) \n\n\n\nمراقبه \n\nچون نفس برای انجام گناهان و پیروی از شهوات آمادگی بیشتری دارد ناخودآگاه بدانسو کشیده می شود به همین جهت انسان پس از مشارطه برای اجرای عهد و پیمان باید مراقب خود باشد و بدون آن نمی تواند خود را اصلاح کند. علی(ع) می فرماید: سزاوار است که انسان بر نفس خود مسلط باشد،  قلب و زبانش را مراقبت نماید.\n\n\n  محاسبه\n\nمحاسبه آن است که انسان در هر شبانه روز، وقتی را معین کند تا در آن خود را حسابرسی کند و طاعات و معاصی خود را بسنجد. و اگر دید معصیتی از او سر زده یا تقصیر نموده است از خداوند طلب بخشش کند و تصمیم بگیرد دیگر چنین کاری انجام ندهد.\n\n\nمعاتبه\n\nمعاتبه آن است که پس از محاسبه چون دید مرتکب گناهانی شده و یا واجبی را انجام نداده است خود را مورد سرزنش و ملامت قرار دهد مثلا خطاب به نفس بگوید: اُف بر تو ای نفس. مرا هلاک کردی و بزودی در آتش با شیاطین و بدکاران عذاب خواهی شد.\n\n\nمعاقبه\n\nبرای اصلاح سرزنش و ملامت تنها کافی نیست بلکه باید نفس را در برابر گناهانی که مرتکب شده است، مجازات کند؛ و برای هر گناهی مجازات مناسب با آن قرار دهد.\n</string>


</resources>

    <!-- TODO: Remove or change this placeholder text -->
