<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
android:background="@drawable/background"
    tools:context=".NoteDetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/bck_play"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/add_problem_aye"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#012C4E"
                android:gravity="center"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/bck_play"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/name_sure"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="#012C4E"

                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/edtNameSure_note"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/black_overlay"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/bck_play"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/number_aye"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="#012C4E"

                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/edtNumberAye_note"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textDirection="ltr"
                android:background="@color/black_overlay"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/bck_play"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/aye"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="#012C4E"

                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/edtAye_note"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:padding="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/black_overlay"
                android:textSize="20dp"/>


            <Button
                android:layout_width="95dp"
                android:layout_height="53dp"
                android:background="@drawable/bck_play"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"

                android:onClick="saveNote"
                android:text="@string/save"
                android:textStyle="bold"
                android:layout_marginTop="65dp"
                android:textSize="25dp" />



        </LinearLayout>






    </ScrollView>

</LinearLayout>